--- a/index.html
+++ b/index.html
@@ -12,7 +12,112 @@
 </head>
 
 <body>
-  <h1>Hello, world!</h1>
+  <div class="container-fluid">
+    <div class="container">
+
+      <header class="row">
+        <div class="col-12 my-4 py-4">
+          <img src="./img/logo.svg" alt="MSD" />
+        </div>
+      </header>
+
+      <div class="row content-wrap">
+        <div class="cw-misc">&nbsp;</div>
+        <div class="col-12 col-lg-6 bg-white p-5">
+          <h1>Registrate en<br />
+            MSD CONECTA y llevá tus conocimientos a otro nivel</h1>
+          <br />
+          <p><strong>MSD Conecta</strong> es la plataforma de actualización y conocimiento especialmente creado por MSD
+            Argentina para
+            los profesionales de la salud del país.</p>
+          <br />
+          <a href="#">Registrate y nunca pares de aprender ></a>
+
+          <h2>¿Qué vas a encontrar en MSD CONECTA?</h2>
+
+          <ul class="icos">
+            <li>
+              <img src="./img/ico1.svg" />
+              <br />
+              <strong>Información relevante</strong> de los productos de MSD
+            </li>
+            <li>
+              <img src="./img/ico2.svg" />
+              <br />
+              <strong>Agenda de eventos</strong> virtuales y presenciales
+            </li>
+            <li>
+              <img src="./img/ico3.svg" />
+              <br />
+              <strong>Videos de interés</strong> para su práctica médica
+            </li>
+            <li>
+              <img src="./img/ico4.svg" />
+              <br />
+              <strong>Podcasts para actualizarse</strong> todos los días
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-12 col-lg-6">
+          <div class="form-head">
+            <img src="./img/userVector.svg" />
+            Registrate <strong>GRATIS</strong> ahora
+          </div>
+          <form action="" class="border p-5 bg-white">
+            <label for="nombre">Nombre <span>*</span>
+              <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre" />
+            </label>
+            <label for="apellido">Apellido <span>*</span>
+              <input type="text" name="apellido" id="apellido" placeholder="Escribe tu apellido" />
+            </label>
+            <label for="email">Correo electrónico <span>*</span>
+              <input type="email" name="email" id="email" placeholder="Escribe tu correo electrónico" />
+            </label>
+            <label for="matrícula*">Matrícula <span>*</span>
+              <input type="text" name="matrícula" id="matrícula" placeholder="Escribe tu matrícula" />
+            </label>
+            <input type="checkbox" />
+            Me gustaría recibir contenidos de MSD acerca de webcasts, información de productos, iniciativas con
+            patología e información corporativa, de acuerdo a lo establecido en el Aviso de Privacidad.
+            <br /><br />
+            Al hacer click, reconoce que ha leído, entendido y acepta nuestros <a href="#">términos y condiciones de
+              uso</a>, <a href="#">política de privacidad</a> y <a href="#">compromiso de privacidad</a>.
+            <input type="submit" value="Registrarme" />
+          </form>
+        </div>
+      </div>
+
+      <footer class="row border-top mt-5 pt-5">
+        <div class="col-9">
+          <ul>
+            <li><a href="#">Explorando MSD</a></li>
+            <li><a href="#">Farmacovigilancia</a></li>
+          </ul>
+          <p>
+            D.R. © 2022 Merck & Co., Inc., Rahway, NJ, USA y sus filiales. Todos los derechos reservados.<br />
+            Prohibida su reproducción total o parcial.<br />
+            MSD ARGENTINA S.R.L. Cazadores de Coquimbo 2841/57, Piso 4 (B1605AZE) - Munro - Vicente López - Bs. As. /
+            Tel.: 11-6090-7200 // <a href="#">www.msd.com.ar</a> // <a href="#">recepcion_argentina@merck.com</a><br />
+            <br />
+          </p>
+          <ul>
+            <li><a href="#">Términos y condiciones de uso</a></li>
+            <li><a href="#">Aviso de privacidad</a></li>
+            <li><a href="#">Política de privacidad</a></li>
+            <li><a href="#">Compromiso de privacidad</a></li>
+            <li><a href="#">Accesibilidad</a></li>
+          </ul>
+        </div>
+        <div class="col-3 text-end">
+          <img src="./img/logo.svg" alt="img footer" />
+          <br />
+          <img src="./img/imgfooter.png" alt="img footer" />
+        </div>
+      </footer>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
