--- a/index.html
+++ b/index.html
@@ -24,37 +24,39 @@
       <div class="row content-wrap">
         <div class="cw-misc">&nbsp;</div>
         <div class="col-12 col-lg-6 bg-white p-5">
-          <h1>Registrate en<br />
-            MSD CONECTA y llevá tus conocimientos a otro nivel</h1>
-          <br />
-          <p><strong>MSD Conecta</strong> es la plataforma de actualización y conocimiento especialmente creado por MSD
-            Argentina para
-            los profesionales de la salud del país.</p>
-          <br />
-          <a href="#">Registrate y nunca pares de aprender ></a>
-
-          <h2>¿Qué vas a encontrar en MSD CONECTA?</h2>
+          <div class="fix-height">
+            <h1>Registrate en<br />
+              MSD CONECTA y llevá tus conocimientos a otro nivel</h1>
+            <br />
+            <p><strong>MSD Conecta</strong> es la plataforma de actualización y conocimiento especialmente creado por
+              MSD
+              Argentina para
+              los profesionales de la salud del país.</p>
+            <br />
+            <a href="#">Registrate y nunca pares de aprender ></a>
+          </div>
+          <h2 class="pt-5">¿Qué vas a encontrar en MSD CONECTA?</h2>
 
           <ul class="icos">
             <li>
               <img src="./img/ico1.svg" />
               <br />
-              <strong>Información relevante</strong> de los productos de MSD
+              <strong>Información relevante</strong><br /> de los productos de MSD
             </li>
             <li>
               <img src="./img/ico2.svg" />
               <br />
-              <strong>Agenda de eventos</strong> virtuales y presenciales
+              <strong>Agenda de eventos</strong><br /> virtuales y presenciales
             </li>
             <li>
               <img src="./img/ico3.svg" />
               <br />
-              <strong>Videos de interés</strong> para su práctica médica
+              <strong>Videos de interés</strong><br /> para su práctica médica
             </li>
             <li>
               <img src="./img/ico4.svg" />
               <br />
-              <strong>Podcasts para actualizarse</strong> todos los días
+              <strong>Podcasts para actualizarse</strong><br /> todos los días
             </li>
           </ul>
         </div>
@@ -77,12 +79,16 @@
             <label for="matrícula*">Matrícula <span>*</span>
               <input type="text" name="matrícula" id="matrícula" placeholder="Escribe tu matrícula" />
             </label>
-            <input type="checkbox" />
-            Me gustaría recibir contenidos de MSD acerca de webcasts, información de productos, iniciativas con
-            patología e información corporativa, de acuerdo a lo establecido en el Aviso de Privacidad.
-            <br /><br />
-            Al hacer click, reconoce que ha leído, entendido y acepta nuestros <a href="#">términos y condiciones de
-              uso</a>, <a href="#">política de privacidad</a> y <a href="#">compromiso de privacidad</a>.
+            <div class="indent-check">
+              <input type="checkbox" id="checkbox-accept" />
+              <label for="checkbox-accept">Me gustaría recibir contenidos de MSD acerca de webcasts, información de
+                productos, iniciativas con
+                patología e información corporativa, de acuerdo a lo establecido en el Aviso de Privacidad.
+                <br /><br />
+                Al hacer click, reconoce que ha leído, entendido y acepta nuestros <a href="#">términos y condiciones de
+                  uso</a>, <a href="#">política de privacidad</a> y <a href="#">compromiso de privacidad</a>.
+                </p>
+            </div>
             <input type="submit" value="Registrarme" />
           </form>
         </div>
